--- a/deno/deno.json
+++ b/deno/deno.json
@@ -1,6 +1,7 @@
 {
 	"imports": {
-		"@std/http": "jsr:@std/http@^1.0.17"
+		"@std/http": "jsr:@std/http@^1.0.17",
+        "@std/assert": "jsr:@std/assert"
 	},
 	"tasks": {
 		"start": "deno run --watch --allow-net --allow-read server.js"
@@ -12,7 +13,10 @@
 	},
 	"lint": {
 		"include": [
-			"./**/*.js"
+			"./**/*.js",
+			"./**/*.ts",
+			"./**/*.jsx",
+			"./**/*.tsx"
 		],
 		"rules": {
 			"tags": [
@@ -27,14 +31,17 @@
 		}
 	},
 	"fmt": {
-		"useTabs": true,
+		"useTabs": true, 
 		"lineWidth": 80,
 		"indentWidth": 4,
 		"semiColons": true,
 		"singleQuote": true,
 		"proseWrap": "preserve",
 		"include": [
-			"./**/*.js"
+          "./**/*.js",
+          "./**/*.ts",
+          "./**/*.jsx",
+          "./**/*.tsx"
 		]
 	},
 	"test": {
